--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Nabin KC",
   "license": "ISC",
   "devDependencies": {
+    "cors": "^2.8.5",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
